# opera-cloud-mcp

./: .coverage-ratchet.json  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  coverage.json  docker-compose.yml  pyproject.toml  test_opera_cli.py
.oneiric_cache/: runtime_telemetry.json  workflow_checkpoints.sqlite
docs/diagrams/: README.md
examples/: auth_example.py  base_client_usage.py
opera_cloud_mcp/: __main__.py  main.py  server.py
opera_cloud_mcp/.skylos/: cache.sqlite
opera_cloud_mcp/auth/: __init__.py  audit_logger.py  oauth_handler.py  secure_oauth_handler.py  security_enhancements.py  security_middleware.py
opera_cloud_mcp/clients/: base_client.py  client_factory.py
opera_cloud_mcp/clients/api_clients/: activities.py  block.py  cashiering.py  crm.py  front_office.py  housekeeping.py  inventory.py  rates.py  reservations.py
opera_cloud_mcp/config/: security_settings.py  settings.py
opera_cloud_mcp/models/: common.py  guest.py  reservation.py
opera_cloud_mcp/resources/: api_specs.py  health_check.py
opera_cloud_mcp/tools/: financial_tools.py  guest_tools.py  operation_tools.py  reservation_tools.py  room_tools.py  tool_registry.py
opera_cloud_mcp/utils/: cache_manager.py  client_factory.py  connection_optimizer.py  exceptions.py  formatters.py  observability.py  resilience_manager.py  validators.py
tests/: conftest.py  test_schema_validation.py
tests/integration/: test_main_integration.py  test_reservation_integration.py
tests/performance/: load_test.py  test_performance.py
tests/unit/: test_activities_client.py  test_api_specs.py  test_cache_manager.py  test_cli.py  test_crm_client.py  test_enhanced_oauth_integration.py  test_front_office_client.py  test_health_check.py  test_main.py  test_models.py  test_reservation_models.py  test_reservation_tools.py  test_reservations_client.py  test_tool_registry.py
