[project]
name = "opera-cloud-mcp"
version = "0.1.0"
description = "MCP Server for the Opera Cloud API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=41.0.0",
]

[project.scripts]
opera-cloud-mcp = "opera_cloud_mcp.server:main"

[dependency-groups]
dev = [
    "crackerjack>=0.31.10",
    "excalidraw-mcp>=0.1.2",
    "session-mgmt-mcp>=0.1.3",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.4.8",
    "bandit>=1.7.9",
    "pre-commit>=3.3.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "opera_cloud_mcp",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "S",
    "T20",
    "SIM",
    "TCH",
]
ignore = [
    "S101",
    "S603",
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-fail-under=80"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = [
    "tests",
]
skips = [
    "B101",
    "B603",
    "B607",
]

[tool.coverage.run]
source = [
    ".",
]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
